apache, no phpmyadmin

--- a/starter.ini
+++ b/starter.ini
@@ -10,7 +10,7 @@
 # Can be changed after a workspace is created
 [development]
 # Valid values: apache, nginx, php
-default_server=nginx
+default_server=apache
 # Valid values: tail, multitail
 apache_log_monitor=tail
 # Valid values: =tail, multitail
@@ -27,7 +27,7 @@ nginx_log_monitor=tail
 type=laravel-js-2space
 
 [phpmyadmin]
-install=1
+install=0
 
 [react]
 # laravel/ui scaffolding
