--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,10 @@ image:
   file: .gitpod.Dockerfile
 
 ports:
+  - port: 3001
+    onOpen: ignore
+  - port: 3005
+    onOpen: ignore
   - port: 3306
     onOpen: ignore
   - port: 8000
